--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -20,7 +20,7 @@
         <div class="profileText">
           <div class="imgBox">
             <img
-              src="D:\GitDemo\Hackathon\Milestone 1\source\Profile Picture.jpg"
+              src="https://github.com/WaqaraSadhayo/Hackathon/blob/main/Milestone%201/source/Profile%20Picture.jpg?raw=true"
               alt="Profile Image"
             />
           </div>
