Add Some Styles

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -37,7 +37,7 @@
               <span class="icon"
                 ><i class="fa fa-phone" aria-hidden="true"></i
               ></span>
-              <span class="text">+92 123 4567 89</span>
+              <span class="text">03123456789</span>
             </li>
             <li>
               <span class="icon"
